[package]
name = "epoch-converter"
version = "0.1.0"
authors = ["Ashwanth Goli <iamashwanth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
exitfailure = "0.5.1"
failure = "0.1.8"
structopt = "0.3"
regex = "1"
